# EnergyFlux

./: .dockerignore  .env.example  .gitignore  BLOG2_PRD.md  CAREER_TARGETING.md  DEPLOY_RUNBOOK.md  Dockerfile  LICENSE  PRD.md  README.md  ROADMAP.md  STUDY_PLAN.md  compose.yaml  index.html  pyproject.toml  requirements.txt
.streamlit/: config.toml
blog/: blog1_v20.html
blog/_sources/: blog1_v20.md  blog2_fig1_data.csv
docs/: blog_series.md  roadmap.md  site_classes.md
knowledge_vault/: AGENTS.md  README.md  index.md  log.md
knowledge_vault/templates/: concept_template.md  entity_template.md  source_template.md  synthesis_template.md
lightning_logs/version_0/: events.out.tfevents.1775189797.Chennans-MacBook-Air.local  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1775189818.Chennans-MacBook-Air.local
scripts/: build_blog2_fig1.py  build_blog2_fig3.py  build_blog2_fig4_sizing.py  build_blog2_fig5_dispatch.py  build_blog2_fig7_peak_decomp.py  build_blog2_fig8_wiki_graph.py  build_wiki.py  commit_blog2_work.sh  wiki_graph_manifest.py
stage1_5_wwtp_dc/: README.md  app.py  docker-compose.yml  requirements-dev.txt  requirements.txt  run_demo.py
stage1_5_wwtp_dc/agent/: dispatch_agent.py  rca_prompts.py
stage1_5_wwtp_dc/apps/: blog2_flowsheet_app.py  blog2_genai_app.py  blog2_genai_app_v2.py  blog2_sizing_app.py
stage1_5_wwtp_dc/data/: case1_results.csv  case2_results.csv  case3_results.csv  dispatch_hourly.csv  powerflow_hourly.csv  pv_hourly.csv  wwtp_load_hourly.csv  wwtp_load_shifted_do.csv
wiki/: index.html  log.html
(+133 files in other folders)
